@@ -97,8 +97,9 @@ var loadModule                      = function(pParams){
     if( !Util.isContainStr(lPath, '.js') )
         lPath += '.js';
     
-    cloudcmd[lName] = function(pArg){        
-        Util.exec(lDoBefore);
+    cloudcmd[lName] = function(pArg){
+        
+        lPath = Util.exec(lDoBefore) || lPath;
         
         return DOM.jsload(cloudcmd.LIBDIRCLIENT + lPath, lFunc ||
             function(){
@@ -343,6 +344,9 @@ function initModules(pCallBack){
     DOM.ajax({
         url:'/modules.json',
         success: function(pModules){
+            const   DROPBOX     = 'storage/_dropbox',
+                    GITHUB      = 'storage/_github';
+            
             var lShowLoadFunc       = Util.retFunc( DOM.Images.showLoad ),
                 lDisableMenuFunc    = function(){
                     var lFunc = document.oncontextmenu;
@@ -351,12 +355,32 @@ function initModules(pCallBack){
                         return cloudcmd.Menu.ENABLED || false;
                     };
                 },
+                lStorage            = function(){
+                    const lKEY = cloudcmd.KEY;
+                    
+                    var lRet = false;
+                    
+                    switch(event.keyCode){
+                    case lKEY.G:
+                        lRet = GITHUB;
+                        break;
+                        
+                    case lKEY.D:
+                        lRet = DROPBOX;
+                        break;
+                    }
+                    
+                    return lRet && (lRet + '.js');
+                },
                 
                 lDoBefore           = {
-                    'viewer'                : lShowLoadFunc,
                     'editor/_codemirror'    : lShowLoadFunc,
-                    'menu'                  : lDisableMenuFunc
+                    'menu'                  : lDisableMenuFunc,
+                    'viewer'                : lShowLoadFunc
                 };
+                
+            lDoBefore[GITHUB]   = 
+            lDoBefore[DROPBOX]  = lStorage;
             
             lDisableMenuFunc();
             
