@@ -78,8 +78,10 @@ var CloudCommander, Util, DOM;
                         Util.exec(cloudcmd.Config);
                     }
                     
-                    else if(lKeyCode === KEY.G && event.altKey)
+                    else if( (lKeyCode === KEY.G || lKeyCode === KEY.D) && event.altKey){
                         Util.exec(cloudcmd.Storage);
+                        event.preventDefault();
+                    }
                     
                     /* если нажали таб:
                      * переносим курсор на
