@@ -16,8 +16,7 @@ var CloudCommander, DOM, Dropbox; //o7d6llji052vijk
                 console.log('Chose something');
             }
         };
-        
-    cloudcmd.Storage                    = {};
+    
     
     /* PRIVATE FUNCTIONS */
     
