@@ -14,8 +14,7 @@ var CloudCommander, Util, DOM, $, Github, cb;
         GithubLocal,
         User,
         GithubStore                     = {};
-        
-    cloudcmd.Storage                    = {};
+    
     
     /* temporary callback function for work with github */
     cb = function (err, data){ console.log(err || data);};
