@@ -350,7 +350,7 @@ var Util, exports;
      * @param pCallBack
      * @param pArg
      */
-    Util.exec = function(pCallBack, pArg){
+    Util.exec                       = function(pCallBack, pArg){
         var lRet = false;
         
         if( Util.isFunction(pCallBack) )
@@ -362,7 +362,7 @@ var Util, exports;
     /** 
      * Gets current time in format hh:mm:ss
      */
-    Util.getTime = function(){
+    Util.getTime                    = function(){
         var date        = new Date(),
             hours       = date.getHours(),
             minutes     = date.getMinutes(),
